@@ -78,6 +78,7 @@ typedef enum {
     M_VCV,        /* parameter covariance matrix */
     M_RHO,        /* autoregressive coefficients */
     M_COMPAN,     /* VAR companion matrix */
+    M_XTXINV,     /* VARs, VECMs: X'X^{-1} */
     M_JALPHA,     /* Johansen's alpha */
     M_JBETA,      /* Johansen's beta */
     M_JVBETA,     /* Covariance matrix for Johansen's normalized beta */
